--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,10 @@ environment:
   flutter: '>=1.17.0'
 
 dependencies:
+  dartz: ^0.10.1
+  equatable: ^2.0.3
+  get_it: ^7.2.0
+  faker: ^2.0.0
   flutter:
     sdk: flutter
 
